// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleMenu ModuleMenu renders correctly with "Full" access level, no readOnly 1`] = `
<div
  className="repository--module-icon--menu-wrapper"
>
  <div
    className="repository--module-icon--menu "
  >
    <a
      className="repository--button "
      download={null}
      href="/preview/mockDraftId"
      target="_blank"
    >
      Preview
    </a>
    <a
      className="repository--button "
      download={null}
      href="/url/for/editor"
      target="_blank"
    >
      Edit
    </a>
    <button
      className="repository--button "
      onClick={[Function]}
    >
      Share
    </button>
    <hr />
    <button
      className="repository--button more"
      onClick={[Function]}
    >
      More...
    </button>
  </div>
</div>
`;

exports[`ModuleMenu ModuleMenu renders correctly with "Full" access level, readOnly false 1`] = `
<div
  className="repository--module-icon--menu-wrapper"
>
  <div
    className="repository--module-icon--menu "
  >
    <a
      className="repository--button "
      download={null}
      href="/preview/mockDraftId"
      target="_blank"
    >
      Preview
    </a>
    <a
      className="repository--button "
      download={null}
      href="/url/for/editor"
      target="_blank"
    >
      Edit
    </a>
    <button
      className="repository--button "
      onClick={[Function]}
    >
      Share
    </button>
    <hr />
    <button
      className="repository--button more"
      onClick={[Function]}
    >
      More...
    </button>
  </div>
</div>
`;

exports[`ModuleMenu ModuleMenu renders correctly with "Full" access level, readOnly true 1`] = `
<div
  className="repository--module-icon--menu-wrapper"
>
  <div
    className="repository--module-icon--menu "
  >
    <a
      className="repository--button "
      download={null}
      href="/preview/mockDraftId"
      target="_blank"
    >
      Preview
    </a>
    <button
      className="repository--button "
      onClick={[Function]}
    >
      Synchronize
    </button>
    <button
      className="repository--button "
      onClick={[Function]}
    >
      Share
    </button>
    <hr />
    <button
      className="repository--button more"
      onClick={[Function]}
    >
      More...
    </button>
  </div>
</div>
`;

exports[`ModuleMenu ModuleMenu renders correctly with "Minimal" access level, no readOnly 1`] = `
<div
  className="repository--module-icon--menu-wrapper"
>
  <div
    className="repository--module-icon--menu "
  >
    <a
      className="repository--button "
      download={null}
      href="/preview/mockDraftId"
      target="_blank"
    >
      Preview
    </a>
    <hr />
    <button
      className="repository--button more"
      onClick={[Function]}
    >
      More...
    </button>
  </div>
</div>
`;

exports[`ModuleMenu ModuleMenu renders correctly with "Minimal" access level, readOnly false 1`] = `
<div
  className="repository--module-icon--menu-wrapper"
>
  <div
    className="repository--module-icon--menu "
  >
    <a
      className="repository--button "
      download={null}
      href="/preview/mockDraftId"
      target="_blank"
    >
      Preview
    </a>
    <hr />
    <button
      className="repository--button more"
      onClick={[Function]}
    >
      More...
    </button>
  </div>
</div>
`;

exports[`ModuleMenu ModuleMenu renders correctly with "Minimal" access level, readOnly true 1`] = `
<div
  className="repository--module-icon--menu-wrapper"
>
  <div
    className="repository--module-icon--menu "
  >
    <a
      className="repository--button "
      download={null}
      href="/preview/mockDraftId"
      target="_blank"
    >
      Preview
    </a>
    <hr />
    <button
      className="repository--button more"
      onClick={[Function]}
    >
      More...
    </button>
  </div>
</div>
`;

exports[`ModuleMenu ModuleMenu renders correctly with "Partial" access level, no readOnly 1`] = `
<div
  className="repository--module-icon--menu-wrapper"
>
  <div
    className="repository--module-icon--menu "
  >
    <a
      className="repository--button "
      download={null}
      href="/preview/mockDraftId"
      target="_blank"
    >
      Preview
    </a>
    <a
      className="repository--button "
      download={null}
      href="/url/for/editor"
      target="_blank"
    >
      Edit
    </a>
    <hr />
    <button
      className="repository--button more"
      onClick={[Function]}
    >
      More...
    </button>
  </div>
</div>
`;

exports[`ModuleMenu ModuleMenu renders correctly with "Partial" access level, readOnly false 1`] = `
<div
  className="repository--module-icon--menu-wrapper"
>
  <div
    className="repository--module-icon--menu "
  >
    <a
      className="repository--button "
      download={null}
      href="/preview/mockDraftId"
      target="_blank"
    >
      Preview
    </a>
    <a
      className="repository--button "
      download={null}
      href="/url/for/editor"
      target="_blank"
    >
      Edit
    </a>
    <hr />
    <button
      className="repository--button more"
      onClick={[Function]}
    >
      More...
    </button>
  </div>
</div>
`;

exports[`ModuleMenu ModuleMenu renders correctly with "Partial" access level, readOnly true 1`] = `
<div
  className="repository--module-icon--menu-wrapper"
>
  <div
    className="repository--module-icon--menu "
  >
    <a
      className="repository--button "
      download={null}
      href="/preview/mockDraftId"
      target="_blank"
    >
      Preview
    </a>
    <button
      className="repository--button "
      onClick={[Function]}
    >
      Synchronize
    </button>
    <hr />
    <button
      className="repository--button more"
      onClick={[Function]}
    >
      More...
    </button>
  </div>
</div>
`;

exports[`ModuleMenu ModuleMenu renders correctly with className prop 1`] = `
<div
  className="repository--module-icon--menu-wrapper"
>
  <div
    className="repository--module-icon--menu extra-class"
  >
    <a
      className="repository--button "
      download={null}
      href="/preview/mockDraftId"
      target="_blank"
    >
      Preview
    </a>
    <a
      className="repository--button "
      download={null}
      href="/url/for/editor"
      target="_blank"
    >
      Edit
    </a>
    <button
      className="repository--button "
      onClick={[Function]}
    >
      Share
    </button>
    <hr />
    <button
      className="repository--button more"
      onClick={[Function]}
    >
      More...
    </button>
  </div>
</div>
`;

exports[`ModuleMenu ModuleMenu renders correctly with standard expected props 1`] = `
<div
  className="repository--module-icon--menu-wrapper"
>
  <div
    className="repository--module-icon--menu "
  >
    <a
      className="repository--button "
      download={null}
      href="/preview/mockDraftId"
      target="_blank"
    >
      Preview
    </a>
    <hr />
    <button
      className="repository--button more"
      onClick={[Function]}
    >
      More...
    </button>
  </div>
</div>
`;
